--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
         "babel-preset-react": "^6.16.0",
         "babel-preset-stage-0": "^6.24.1",
         "path": "^0.12.7",
-        "prop-types": "^15.6.0",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0",
         "webpack": "^4.5.0",
         "webpack-cli": "^3.2.1"
+    },
+    "dependencies": {
+        "prop-types": "^15.7.2",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0"
     }
 }
