--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-jornaya",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Simple React Component to integrate Jornaya UniversalLeadId processes into any React/preact app",
     "homepage": "https://github.com/dolead/react-jornaya",
     "keywords": [
@@ -15,7 +15,8 @@
     "main": "./lib/JornayaComponent.js",
     "license": "MIT",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "prepublish": "rm -rf ./lib && npm run build"
     },
     "peerDependencies": {
         "prop-types": "^15.6.0",
@@ -29,12 +30,10 @@
         "babel-preset-react": "^6.16.0",
         "babel-preset-stage-0": "^6.24.1",
         "path": "^0.12.7",
+        "prop-types": "^15.6.0",
+        "react": "^16.0.0",
+        "react-dom": "^16.0.0",
         "webpack": "^4.5.0",
         "webpack-cli": "^3.2.1"
-    },
-    "dependencies": {
-        "prop-types": "^15.7.2",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0"
     }
 }
